implements play function

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             <span>Seleziona la difficoltà: </span>
             <select name="difficulty" id="difficulty">
                 <option value=""></option>
-                <option value="1" >Facile</option>
-                <option value="2" >Normale</option>
-                <option value="3" >Difficile</option>
+                <option value="Easy" >Facile</option>
+                <option value="Default" >Normale</option>
+                <option value="Hard" >Difficile</option>
             </select>
+            <button id="play">GIOCA</button>
         </div>
     </header>
     <main>
